tests/machine/x/ruby/group_by_conditional_sum.error
error: /workspace/mochi/tests/machine/x/ruby/group_by_conditional_sum.rb:174:in `block in <main>': undefined local variable or method `g' for main:Object (NameError)

	], { 'select' => ->(i){ [i] }, 'sortKey' => ->(i){ g.key } })
	                                                   ^
	from /workspace/mochi/tests/machine/x/ruby/group_by_conditional_sum.rb:139:in `block in _query'
	from /workspace/mochi/tests/machine/x/ruby/group_by_conditional_sum.rb:139:in `map'
	from /workspace/mochi/tests/machine/x/ruby/group_by_conditional_sum.rb:139:in `_query'
	from /workspace/mochi/tests/machine/x/ruby/group_by_conditional_sum.rb:173:in `<main>'
172: 	src = items
173: 	_rows = _query(src, [
174: 	], { 'select' => ->(i){ [i] }, 'sortKey' => ->(i){ g.key } })
175: 	_groups = _group_by(_rows, ->(i){ i.cat })
176: 	_res = []
